Revert "Fix styles", change back to floating
This reverts commit 3ead97bbfbefbb2f1e6607d6bd26c1f2bf19646c.

Done to avoid overlapping of elements on smaller screens

--- a/styles/default.css
+++ b/styles/default.css
@@ -38,7 +38,6 @@ body {
 
 #site-title {
     padding-bottom: 15px;
-    position: relative;
 }
 
 #site-title-main {
@@ -54,8 +53,7 @@ body {
 }
 
 #site-title-sub {
-    position: absolute;
-    right: 0;
+    float: right;
     margin-right: 3%;
 }
 
