--- a/styles/index.css
+++ b/styles/index.css
@@ -2,7 +2,6 @@
     font-size: 30px;
     border-bottom: 2px solid black;
     padding-left: 5px;
-    margin-top: 30px;
 }
 
 #index {
@@ -17,7 +16,6 @@
     padding-bottom: 10px;
     border-bottom: 1px dashed gray;
     padding-left: 5px;
-    position: relative;
 }
 
 .index-post-link {
@@ -25,8 +23,7 @@
 }
 
 .index-post-date {
-    position: absolute;
-    right: 0;
+    float: right;
 }
 
 .index-fill {
